# pyrapid

./: .env.example  .gitignore  CLAUDE.md  Data Export Rest API.postman_collection.json  LICENSE  MANIFEST.in  README.md  examples.py  pyproject.toml  requirements.txt  setup.py
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: python-publish.yml  python-test.yml
pyrapid/: __init__.py  endpoints.py  rapid.py
pyrapid/tests/: test_rapid.py
