[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrapid"
version = "1.0.0"
description = "Python client library for Rapid Response Management System (RRMS) API"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Marcus Evans", email = "marcus@marcusbevans.com"},
]
maintainers = [
    {name = "Marcus Evans", email = "marcus@marcusbevans.com"},
]
keywords = ["rapid", "response", "rrms", "api", "client", "rest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]
examples = [
    "python-dotenv>=0.19.0",
    "pandas>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/marcusbevans/pyrapid"
Documentation = "https://github.com/marcusbevans/pyrapid#readme"
Repository = "https://github.com/marcusbevans/pyrapid"
"Bug Tracker" = "https://github.com/marcusbevans/pyrapid/issues"

[tool.setuptools.packages.find]
include = ["pyrapid*"]
exclude = ["tests*", "examples*"]